# bluebonnet

./: .codespellrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Quantum Test.ipynb  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: paper.yml  tests.yml
data/: README.md  WellData_20.csv  dataset_1_well_20.csv
docs/: .#FitFunctions.py  FitFunctions.py  FitWellWithPressureData.ipynb  Long-Time Flow Development.ipynb  Makefile  RealGasFlowCompareData2022.ipynb  RealGasFlows.ipynb  Results.pkl  Untitled.ipynb  background.md  bayesian_fitting.ipynb  conf.py  example.ipynb  flow.ipynb  fluids.ipynb  forecast.ipynb  forecast_varying.ipynb  getting_started.ipynb  index.md  make.bat  oil_flow.ipynb  requirements.txt
intel/: pyproject.toml
intel/tests/: test_intel.py
paper/: Fig_1.tiff  Fig_2.tiff  Fig_3.tiff  Fig_4.tiff  paper.bib  paper.md
src/bluebonnet/: __init__.py  forecast.py  plotting.py
src/bluebonnet/flow/: __init__.py  flowproperties.py  reservoir.py
src/bluebonnet/fluids/: HallYarbEOS.py  Pseudo Critical Pressure psia.csv  Pseudo Critical Temp _R_.csv  PseudocriticalProperties.json  __init__.py  fluid.py  gas.py  oil.py  water.py
src/bluebonnet/forecast/: __init__.py  forecast.py  forecastMarder.py  forecast_pressure.py
tests/: test_bluebonnet.py  test_plots.py
tests/data/: HallYarbEOS.xls  pvt_gas.csv  pvt_gas_HAYNESVILLE SHALE_12.csv  pvt_gas_HAYNESVILLE SHALE_20.csv  pvt_gas_MARCELLUS_31.csv  pvt_ideal_gas.csv  pvt_multiphase_oil.csv  pvt_oil.csv  pvt_water.csv
tests/flow/: test_properties.py  test_reservoir.py
tests/fluids/: conftest.py  test_fluid.py  test_gas.py  test_oil.py  test_water.py
tests/forecast/: test_forecast.py
