[project]
name = "bluebonnet"
version = "0.1.0"
description = "Scaling solutions for production analysis from unconventional oil and gas wells"
authors = [
    { name = "Frank Male", email = "frank.male@psu.edu" },
    { name = "Michael Marder", email = "marder@chaos.utexas.edu"}
]
license =  {file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 1 - Planning",
]
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "lmfit >=1.0",
    "numpy >=1.22",
    "scipy >=1.7.1",
    "matplotlib >=3.4.3",
    "pandas >=1.3.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit >=2.19",
    "jupyter >=1.0.0",
]
docs = [
    "myst-nb >=0.13.1",
    "sphinx-autoapi >=1.8.4",
    "sphinx-rtd-theme >=1.0.0",
    "pandas >=1.3.4",
]
test = [
    "pytest >=6.2",
    "pytest-cov >=2.12.1",
    "pytest-xdist >=2.4",
]


[build-system]
requires = ["hatchling>=0.7"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
