[project]
name = "bluebonnet"
version = "0.1.0"
description = "Scaling solutions for production analysis from unconventional oil and gas wells"
authors = [
    { name = "Frank Male", email = "frank.male@psu.edu" },
    { name = "Michael Marder", email = "marder@chaos.utexas.edu"}
]
license =  {file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "lmfit >=1.0",
    "numpy >=1.22",
    "scipy >=1.7.1",
    "matplotlib >=3.4.3",
    "pandas >=1.3.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit >=2.19",
    "jupyter >=1.0.0",
]
docs = [
    "myst-nb >=0.13.1",
    "sphinx >=5.0.2",
    "sphinx-autoapi >=1.8.4",
    "sphinx-rtd-theme >=1.0.0",
]
test = [
    "pytest >=6.2",
    "pytest-cov >=2.12.1",
    "pytest-mpl >=0.16",
    "pytest-xdist >=2.4",
]


[build-system]
requires = ["hatchling>=0.7"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@jit",
  "@njit",
  "raise NotImplementedError",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=src/bluebonnet",
    "--cov-append",
    "--cov-report=xml",
    "--cov-config=pyproject.toml",
    "--mpl",
    "--mpl-baseline-path=tests/baseline",
]
testpaths = [
    "tests",
]
